added order items, add discount

--- a/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
@@ -10,7 +10,6 @@
 <link rel="import" href="../../../../bower_components/vaadin-form-layout/src/vaadin-form-item.html">
 <link rel="import" href="../../../../bower_components/vaadin-grid/src/vaadin-grid.html">
 <link rel="import" href="../../../components/selected-dates.html">
-<link rel="import" href="../../../../bower_components/vaadin-radio-button/src/vaadin-radio-button.html">
 
 <dom-module id="order-items-editor">
     <template>
@@ -90,20 +89,7 @@
    </vaadin-form-item>
    <vaadin-form-item colspan="4">
     <span colspan="4" class="small-font label">Скидка</span>
-    <vaadin-radio-group value="value" id="discount" property="" class="small-font" colspan="4">
-     <vaadin-radio-button value="value" checked>
-       Нет 
-     </vaadin-radio-button>
-     <vaadin-radio-button value="value">
-       10% 
-     </vaadin-radio-button>
-     <vaadin-radio-button value="value">
-       20% 
-     </vaadin-radio-button>
-     <vaadin-radio-button value="value">
-       30% 
-     </vaadin-radio-button>
-    </vaadin-radio-group>
+    <vaadin-radio-group value="value" id="discount" property="" class="small-font" colspan="4"></vaadin-radio-group>
    </vaadin-form-item>
    <vaadin-form-item class="meta-row" colspan="12">
     <div>
