add validation new order item reformat code lazy fetch history

--- a/src/main/resources/static/frontend/src/views/admin/settings/settings-view.html
+++ b/src/main/resources/static/frontend/src/views/admin/settings/settings-view.html
@@ -25,7 +25,7 @@
  </vaadin-button>
 </vaadin-item>
 <vaadin-dialog id="dialog"></vaadin-dialog>
-<vaadin-grid id="grid" theme="crud""></vaadin-grid>
+<vaadin-grid id="grid" theme="crud"></vaadin-grid>
 </template>
 
     <script>
