--- a/src/main/resources/static/frontend/src/components/selected-dates.html
+++ b/src/main/resources/static/frontend/src/components/selected-dates.html
@@ -9,7 +9,11 @@
              }
         </style>
 <!--<vaadin-grid items="[[items]]" id="grid"></vaadin-grid>-->
-<div id="div" style="width:100%; height:100%"></div>
+<div id="div" style="width:100%; 
+height:100%; 
+overflow-x:hidden; 
+font-size: var(--lumo-font-size-s);
+border-bottom: 1px solid var(--lumo-shade-30pct);"></div>
 </template>
 
     <script>
