add setValue(null) to closeSilently() OrderItemEditor

--- a/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
@@ -70,7 +70,7 @@
     <iron-icon slot="prefix" iron="vaadin:at"></iron-icon>
    </vaadin-combo-box>
    <vaadin-form-item>
-    <label slot="label">Счет</label>
+    <label slot="label"></label>
    </vaadin-form-item>
    <div id="invoiceContainer">
     <vaadin-checkbox id="needInvoice">
