--- a/src/main/resources/static/frontend/src/views/admin/prices/price-editor.html
+++ b/src/main/resources/static/frontend/src/views/admin/prices/price-editor.html
@@ -12,44 +12,45 @@
 
 <dom-module id="price-editor">
     <template>
-        <style>
+<style>
+
 
         </style>
-        <div class=" scrollable flex1" id="main">
-            <h3 id="title"></h3>
-            <div class="meta-row" id="metaContainer">
-                <!--<vaadin-combo-box class="status" id="status">Статус</vaadin-combo-box>-->
-                <span class="dim">Прайс #<span id="priceNumber"></span></span>
-            </div>
-            <vaadin-form-layout id="form1">
-
-                <vaadin-form-layout id="form2" colspan="3">
-                    <vaadin-date-picker id="date" label="Дата прайса"></vaadin-date-picker>
-                    <vaadin-checkbox id="checkbox" checked="{{checkboxChecked}}">По умолчанию</vaadin-checkbox>
-                 </vaadin-form-layout>
-
-                <vaadin-form-layout id="form3" colspan="8">
-                    <vaadin-form-item colspan="8">
-                        <label slot="label">Позиции</label>
-                    </vaadin-form-item>
-                    <div id="itemsContainer" colspan="8"></div>
-                </vaadin-form-layout>
-
-            </vaadin-form-layout>
-        </div>
-
-        <buttons-bar id="footer" no-scroll$="[[niScroll]]">
-            <vaadin-button slot="left" id="cancel">Отменить</vaadin-button>
-            <vaadin-button slot="left" id="confirm" theme="primary">
-                Сохранить
-                <iron-icon icon="vaadin-arrow-right" slot="suffix"></iron-icon>
-            </vaadin-button>
-            <vaadin-button slot="right" id="delete" theme="error">
-                Удалить
-                <!--<iron-icon icon="vaadin-arrow-right" slot="suffix"></iron-icon>-->
-            </vaadin-button>
-        </buttons-bar>
-    </template>
+<div class=" scrollable flex1" id="main">
+ <h3 id="title"></h3>
+ <div class="meta-row" id="metaContainer">
+  <!--<vaadin-combo-box class="status" id="status">Статус</vaadin-combo-box>-->
+  <span class="dim">Прайс #<span id="priceNumber"></span></span>
+ </div>
+ <vaadin-form-layout id="form1">
+  <vaadin-form-layout id="form2" colspan="3">
+   <vaadin-date-picker id="date" label="Дата прайса"></vaadin-date-picker>
+   <vaadin-checkbox id="checkbox" checked="{{checkboxChecked}}">
+    По умолчанию
+   </vaadin-checkbox>
+  </vaadin-form-layout>
+  <vaadin-form-layout id="form3" colspan="8">
+   <vaadin-form-item colspan="8">
+    <label slot="label">Позиции</label>
+   </vaadin-form-item>
+   <div id="itemsContainer" colspan="8"></div>
+  </vaadin-form-layout>
+ </vaadin-form-layout>
+</div>
+<buttons-bar id="footer" no-scroll$="[[niScroll]]">
+ <vaadin-button slot="left" id="cancel">
+  Отменить
+ </vaadin-button>
+ <vaadin-button slot="left" id="confirm" theme="primary">
+   Сохранить 
+  <iron-icon icon="vaadin-arrow-right" slot="suffix"></iron-icon>
+ </vaadin-button>
+ <vaadin-button slot="right" id="delete" theme="error">
+   Удалить 
+  <!--<iron-icon icon="vaadin-arrow-right" slot="suffix"></iron-icon>-->
+ </vaadin-button>
+</buttons-bar>
+</template>
 
     <script>
         class PriceEditor extends window.ScrollShadowMixin(Polymer.Element) {
