add grid for pays in order-editor

--- a/src/main/resources/static/frontend/src/views/admin/prices/price-item-editor.html
+++ b/src/main/resources/static/frontend/src/views/admin/prices/price-item-editor.html
@@ -9,7 +9,7 @@
 
 <dom-module id="price-item-editor">
     <template>
-        <style include="shared-style">
+        <style include="shared-styles">
             .price {
                 margin-bottom: 1em;
            }
