--- a/src/main/resources/static/frontend/src/components/selected-dates.html
+++ b/src/main/resources/static/frontend/src/components/selected-dates.html
@@ -12,8 +12,7 @@
 <div id="div" style="width:100%; 
 height:100%; 
 overflow-x:hidden; 
-font-size: var(--lumo-font-size-s);
-border-bottom: 1px solid var(--lumo-shade-30pct);"></div>
+font-size: var(--lumo-font-size-s);"></div>
 </template>
 
     <script>
