--- a/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
@@ -141,7 +141,7 @@
  </div>
  <vaadin-button slot="right" id="save" theme="primary">
    Сохранить 
-  <iron-icon icon="vaadin-arrow-right" slot="suffix"></iron-icon>
+  <iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon>
  </vaadin-button>
 </buttons-bar>
 </template>
