--- a/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-view.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-view.html
@@ -9,11 +9,16 @@
             :host {
                 display: block;
             }
+
+            .primary-50pct {
+                   background-color: var(--lumo-primary-color-50pct);
+                    color: var(--lumo-primary-contrast-color);
+            }
         </style>
 <vaadin-grid items="[[items]]" id="grid"></vaadin-grid>
 <vaadin-dialog id="dialog" on-open-changed="_onDialogOpen"></vaadin-dialog>
 <buttons-bar>
- <vaadin-button id="add" slot="left">
+ <vaadin-button id="add" slot="left" theme="primary">
    Добавить 
  </vaadin-button>
 </buttons-bar>
