--- a/src/main/resources/static/frontend/src/views/orderedit/repayment/repayment-view.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/repayment/repayment-view.html
@@ -16,20 +16,24 @@
         min-width: 2em;
         padding: 0;
       }
+
+      .primary-text {
+      color: var(--lumo-primary-text-color);
+    }
         </style>
 <vaadin-vertical-layout style="width: 100%; height: 100%;">
  <vaadin-dialog id="dialog" on-opened-changed="_onDialogOpen"></vaadin-dialog>
  <vaadin-grid items="[[items]]" id="grid" height-by-rows></vaadin-grid>
 </vaadin-vertical-layout>
 <buttons-bar>
- <vaadin-button id="add" theme="primary" slot="left" index="[[index]]" class="delete">
-  <iron-icon icon="vaadin:plus" slot=""></iron-icon>
+ <vaadin-button id="add" theme="success" slot="left" index="[[index]]" class="delete">
+  <iron-icon icon="lumo:plus" slot=""></iron-icon>
  </vaadin-button>
- <vaadin-button id="deleteBtn" slot="left" index="[[index]]" class="delete">
-  <iron-icon icon="vaadin:close-small" slot=""></iron-icon>
+ <vaadin-button id="deleteBtn" slot="left" index="[[index]]" class="delete" theme="error">
+  <iron-icon icon="lumo:minus" slot=""></iron-icon>
  </vaadin-button>
  <div slot="info">
-  <span id="totalSumSpan">[[totalSum]]</span>
+  <span id="totalSumSpan" class="primary-text">[[totalSum]]</span>
  </div>
 </buttons-bar>
 </template>
