--- a/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
@@ -18,6 +18,7 @@
 <link rel="import" href="../../../styles/shared-styles.html">
 
 <link rel="import" href="invoice/invoice-editor.html">
+<!--<link rel="import" href="../../../bower_components/vaadin-dialog/src/vaadin-dialog.html">-->
 
 <dom-module id="order-editor">
 
@@ -66,6 +67,12 @@
   <span class="dim">Заказ # <span id="orderNumber"></span></span>
   <span class="dim">Контрагент:<span id="customer" style="padding-left:0.2em; font-weight: bold;"></span></span>
  </div>
+ <!--<vaadin-dialog id="dialog" on-opened-changed="_onDialogOpen"></vaadin-dialog>-->
+ <template>
+  <div>
+    Content 
+  </div>
+ </template>
  <vaadin-form-layout id="form1">
   <vaadin-form-layout id="form2">
    <vaadin-date-picker label="Дата заказа" id="dueDate" stop-keyboard-event-propagation></vaadin-date-picker>
@@ -136,6 +143,14 @@
  <vaadin-button slot="left" id="delete" theme="error">
    Удалить 
  </vaadin-button>
+ <vaadin-button>
+   Button 
+ </vaadin-button>
+ <div slot="info" id="divSpec">
+  <vaadin-button id="specBtn" style="min-width: 2em; padding: 0; align-self: flex-start;" theme="success" property="">
+   <iron-icon icon="vaadin:print" slot=""></iron-icon>
+  </vaadin-button>
+ </div>
  <div slot="info" class="total">
    Сумма: [[totalPrice]] 
  </div>
@@ -187,7 +202,17 @@
         const status = this.status ? this.status.toLowerCase() : this.status;
         this.$.status.$.input.setAttribute('status', status);
       }
-    }
+
+      // Workaround for styling the dialog content https://github.com/vaadin/vaadin-dialog-flow/issues/69
+            _onDialogOpen(e) {
+                if (!e.detail.value) {
+                    return;
+                }
+                var content = this.$.dialog.$.overlay.content;
+                content.querySelector('flow-component-renderer').setAttribute('theme', 'dialog');
+            }
+
+      }
 
     customElements.define(OrderEditor.is, OrderEditor);
     </script>
