add link to show specification in pdf

--- a/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
@@ -147,9 +147,9 @@
    Button 
  </vaadin-button>
  <div slot="info" id="divSpec">
-  <vaadin-button id="specBtn" style="min-width: 2em; padding: 0; align-self: flex-start;" theme="success" property="">
-   <iron-icon icon="vaadin:print" slot=""></iron-icon>
-  </vaadin-button>
+  <!--<vaadin-button id="specBtn" style="min-width: 2em; padding: 0; align-self: flex-start;" theme="success" property="">-->
+   <!--<iron-icon icon="vaadin:print" slot=""></iron-icon>-->
+  <!--</vaadin-button>-->
  </div>
  <div slot="info" class="total">
    Сумма: [[totalPrice]] 
