add page ShowCase

--- a/src/main/resources/static/frontend/src/components/search-bar.html
+++ b/src/main/resources/static/frontend/src/components/search-bar.html
@@ -145,7 +145,7 @@
           },
           clearText: {
             type: String,
-            value: 'Clear search'
+            value: 'Очистить поиск'
           },
           showExtraFilters: {
             type: Boolean,
